# QtWebcam

./: .gitignore  CMakeLists.txt  CaptureWindow.cpp  CaptureWindow.h  ImageFormats.cpp  ImageFormats.h  SampleGrabber.h  SampleGrabber.hxx  VideoCapture.cpp  VideoCapture.h  VideoCaptureCallback.h  VideoDevice.cpp  VideoDevice.h  WebcamWindow.cpp  WebcamWindow.h  WebcamWindow.hxx  main.cpp  mainwindow.cpp  mainwindow.h  samplegrabber.h  videocapture-old.cpp  videocapture-old.h  videocapture.cpp  videocapture.h
